--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -26,7 +26,7 @@
   font-size: 13px;
 }
 .main-menu .about-us {
-  margin-left: 215px;
+  margin-left: 177px;
   color: rgb(196, 198, 205);
 }
 .main-menu .icon {
@@ -101,4 +101,34 @@
   #headertop {
     display: none;
   }
+}
+.navbar {
+  padding: 27px 0px;
+}
+
+.navbar-brand {
+  position: relative;
+}
+.navbar-brand img {
+  width: 164px;
+}
+.navbar-brand span {
+  position: absolute;
+  color: #cecfd5;
+  display: block;
+  font-size: 0.6875rem;
+  margin-top: 2px;
+}
+
+.selectLocation {
+  height: 50px;
+  background-color: gold;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+.selectLocation a {
+  text-decoration: none;
+}
+.selectLocation .yourL {
+  font-size: 10px;
 }/*# sourceMappingURL=style.css.map */
