--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@
 }
 
 .home {
-  margin-left: 170px;
+  margin-left: 160px;
   font-size: 15px;
   font-family: "Dosis", sans-serif;
 }
@@ -247,8 +247,52 @@
   font-size: 13px;
 }
 
-.meat img {
+.meat {
+  font-family: "Dosis", sans-serif;
   font-size: 15px;
+  margin-top: -4px;
+}
+.meat img {
+  margin-bottom: 2px;
+}
+
+.bakery {
+  font-family: "Dosis", sans-serif;
+  font-size: 15px;
+  margin-top: -23px;
+  margin-left: -19px;
+}
+.bakery img {
+  width: 70px;
+  margin-bottom: 4px;
+  max-width: 100%;
+}
+.bakery span {
+  margin-left: -18px;
+}
+
+.beverages {
+  font-family: "Dosis", sans-serif;
+  font-size: 15px;
+  margin-top: -6px;
+}
+.beverages img {
+  margin-bottom: 7px;
+}
+.beverages span {
+  margin-left: 5px;
+}
+
+.blog {
+  font-family: "Dosis", sans-serif;
+  font-size: 15px;
+  margin-left: 16px;
+}
+
+.contact {
+  font-family: "Dosis", sans-serif;
+  font-size: 15px;
+  margin-left: 16px;
 }
 
 .allCategories {
@@ -276,4 +320,15 @@
   top: 17px;
   color: white;
   font-size: 13px;
+}
+.allCategories .products63 {
+  font-size: 10px;
+  width: 110px;
+  height: 20px;
+  background-color: whitesmoke;
+  margin-top: 39px;
+  border-radius: 50px;
+  justify-content: center;
+  text-align: center;
+  color: #858997;
 }/*# sourceMappingURL=style.css.map */
