--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -248,7 +248,7 @@
 }
 
 .home{
-    margin-left: 170px;
+    margin-left: 160px;
     font-size: 15px; 
     font-family: 'Dosis', sans-serif;  
     i{
@@ -266,11 +266,49 @@
     }
 }
 .meat{
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    margin-top: -4px;
     img{
-        font-size: 15px;
+        margin-bottom: 2px;
     }
 }
-
+.bakery{
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    margin-top: -23px;
+    margin-left: -19px;
+    img{
+        width: 70px;
+        margin-bottom: 4px;
+        max-width: 100%;
+    }
+    span{
+        margin-left: -18px;
+    }
+}
+.beverages{
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    margin-top: -6px;
+    img{
+        margin-bottom: 7px;
+    
+    }
+    span{
+        margin-left: 5px;
+    }
+}
+.blog{
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    margin-left: 16px;
+}
+.contact{
+    font-family: 'Dosis', sans-serif;
+    font-size: 15px;
+    margin-left: 16px;
+}
 .allCategories{
     width: 200px;
     height: 50px;
@@ -299,5 +337,27 @@
         color: white;
         font-size: 13px;
     }
+    .products63{
+        font-size: 10px;
+        width: 110px;
+        height: 20px;
+        background-color: whitesmoke;
+        margin-top: 39px;
+        border-radius: 50px;
+        justify-content: center;
+        text-align: center;
+        color:  #858997;
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
 
