--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,4 +331,52 @@
   justify-content: center;
   text-align: center;
   color: #858997;
+}
+
+.sliderContent {
+  position: absolute;
+  top: 45px;
+  left: 124px;
+}
+.sliderContent h1 {
+  font-weight: 700;
+  width: 450px;
+  margin-top: 20px;
+  font-size: 50px;
+}
+.sliderContent span {
+  font-size: 14px;
+}
+.sliderContent span .off {
+  color: green;
+  font-weight: 500;
+  border-radius: 20px;
+  padding: 5px;
+  background: linear-gradient(90deg, #88cebf 0%, transparent 100%);
+}
+.sliderContent p {
+  margin-top: 20px;
+  font-size: 17px;
+}
+.sliderContent .from {
+  color: red;
+  font-size: 38px;
+  font-family: "Dosis", sans-serif;
+}
+.sliderContent .thisWeek {
+  font-size: 17px;
+  font-family: "Dosis", sans-serif;
+}
+.sliderContent button {
+  padding: 5px 20px;
+}
+.sliderContent button i {
+  margin-left: 10px;
+}
+
+.prevLeft {
+  margin-right: 25px;
+  padding: 17px 17px;
+  background-color: gray;
+  border-radius: 50px;
 }/*# sourceMappingURL=style.css.map */
