--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -404,6 +405,134 @@
 
 }
 
+.classifications{
+    margin-top:40px;
+    border: 1px solid #dbdce0;
+    border-radius: 10px;
+    .bev{
+        border-top-left-radius:10px ;
+        border-bottom-left-radius: 10px;
+        border-right: 1px solid #dbdce0;
+        text-align: center;
+        .boxBev{
+            img{
+                width: 192px;
+                height: 200px;
+            }
+            
+        }
+        .contentBev{
+            margin-top: 10px;
+            span{
+                font-family: 'Inter', sans-serif;
+                font-weight: 600;
+            }
+            p{
+                font-size: 12px;
+                font-family: 'Inter', sans-serif;
+                color:gray
+            }
+        }
+    }
+    .other{
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        padding: 0px 0px;
+    }
+    .bisSn{
+        border-right: 1px solid #dbdce0;
+        border-bottom: 1px solid #dbdce0;
+        position: relative;
+        .boxBis{
+            img{
+                width: 70px;
+                height: 70px;
+                margin-top: 35px;
+                margin-left: 20px;
+            
+            }
+        }
+        .contentBis{
+            position: absolute;
+            top: 45px;
+            left: 102px;
+            a{
+                text-decoration: none;
+            }
+            p{
+                font-family: 'Inter', sans-serif;
+                font-weight: 600;
+                font-size: 14px;
+                color: #212529;
+            
+            }
+            #bisItem{
+                font-size: 12px;
+                font-family: 'Inter', sans-serif;
+                font-weight: 300;
+                color:gray;
+                margin-top: -15px;
+
+            }
+        }
+    }
+    .frVe{
+        border-right: 1px solid #dbdce0;
+        position: relative;
+        .boxFrVe{
+            img{
+                width: 70px;
+                height: 70px;
+                margin-top: 35px;
+                margin-left: 20px;
+            }
+        }
+        .contentFrVe{
+            position: absolute;
+            top: 45px;
+            left: 102px;
+            a{
+                text-decoration: none;
+                p{
+                    font-family: 'Inter', sans-serif;
+                    font-weight: 600;
+                    font-size: 14px;
+                    color: #212529;
+                
+                }
+                #frItems{
+                    font-size: 12px;
+                    font-family: 'Inter', sans-serif;
+                    font-weight: 300;
+                    color:gray;
+                    margin-top: -12px;
+                }
+
+            }
+        }
+    }
+    .brBa{
+        border-right: 1px solid #dbdce0;
+        border-bottom:1px solid #dbdce0
+    }
+    .grSt{
+        border-right: 1px solid #dbdce0;
+    }
+    .brDa{
+        border-right: 1px solid #dbdce0;
+        border-bottom:1px solid #dbdce0;
+    }
+    .hoNe{
+        border-right: 1px solid #dbdce0;
+    }
+    .frFo{
+        border-bottom: 1px solid #dbdce0;
+        border-top-right-radius: 10px;
+    }
+    .meSe{
+        border-bottom-right-radius: 10px;
+    }
+}
 
 
 
